fix: contact button visibility hidden for own prof

--- a/web/src/app/globals.css
+++ b/web/src/app/globals.css
@@ -17,7 +17,7 @@ div{
 }
 
 ::-webkit-scrollbar-track {
-    background: #060606; /* Background of the track */
+    background: #2f2a2a; /* Background of the track */
     border-radius: 10px;
 }
 
